# vbuild

./: .gitignore  Makefile  README.md  nuitka-crash-report.xml  pyproject.toml  requirements.txt  test.py  wheel_name.py  write_cli_names.py
.github/workflows/: build.yaml  build.yml  builder.yaml
builder/: Containerfile
tests/: lib.sh
tests/basedir/: VELBUILD  validate.sh
tests/basic/: VELBUILD  validate.sh
tests/checksums/: VELBUILD  validate.sh
tests/image/: VELBUILD  validate.sh
tests/rmstream/: VELBUILD
tests/subpackages/: VELBUILD  validate.sh
tests/systemd/: VELBUILD  bar.socket  foo.service  validate.sh
vbuild/: __main__.py  abuild.py  apkbuild.py  bash.py  containers.py  recipe.py  velbuild.py
vbuild/cli/: __init__.py  __modules__.py  __template__.py  all.py  build.py  check.py  checksum.py  clean.py  fetch.py  gen.py  prepare.py  rootpkg.py  unpack.py  validate.py
