[project]
name = "vbuild"
version = "0.0.22"
authors = [
  { name="Eeems", email="eeems@eeems.email" },
]
description = "Build system used for vellum"
license = "MIT"
requires-python = ">=3.12,<3.15"
classifiers = [
    "Development Status :: 5 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving :: Packaging",
]
keywords = [
    "build-tooling",
    "packaging",
    "distribution",
]
dynamic = ["dependencies", "readme"]

[project.urls]
"Homepage" = "https://github.com/Eeems/vbuild"
"Bug Tracker" = "https://github.com/Eeems/vbuild/issues"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
vbuild = "vbuild.__main__:main"

[tool.setuptools]
packages = ["vbuild"]

[tool.setuptools.package-data]
vbuild = ["py.typed", "*.py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file= ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools>=77.0", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"


[tool.ruff]
exclude = [".venv", "build"]

[tool.ruff.lint]
extend-select = [
    "UP",
    "PL",
    "ANN",
    "S",
]
ignore = [
    "PLW0603",
    "PLR2004",
    "PLR0915",
    "PLR0912",
    "PLR0911",
    "PLR6301",
    "PLR0913",
    "S101",
    "S404",
    "S603",
    "S607",
    "ANN401",
    "ANN001",
    "ANN003",
]

[tool.pyright]
exclude = [".venv", "build"]
